Add standard enums for ProgramCategoryClass

--- a/padxml.lpi
+++ b/padxml.lpi
@@ -80,6 +80,10 @@
         <Filename Value="padformat.pas"/>
         <IsPartOfProject Value="True"/>
       </Unit>
+      <Unit>
+        <Filename Value="padconst.pas"/>
+        <IsPartOfProject Value="True"/>
+      </Unit>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
