Reorganize folder structure; add About and Coffee sections

--- a/padxml.lpi
+++ b/padxml.lpi
@@ -20,7 +20,7 @@
     <VersionInfo>
       <UseVersionInfo Value="True"/>
       <MajorVersionNr Value="1"/>
-      <StringTable CompanyName="plaintool" ProductName="PadXml"/>
+      <StringTable CompanyName="plaintool" ProductName="PadXml" ProductVersion="1.0.0"/>
     </VersionInfo>
     <BuildModes>
       <Item Name="Debug" Default="True"/>
@@ -33,6 +33,7 @@
           </Target>
           <SearchPaths>
             <IncludeFiles Value="$(ProjOutDir)"/>
+            <OtherUnitFiles Value="src"/>
             <UnitOutputDirectory Value="lib\$(TargetCPU)-$(TargetOS)"/>
           </SearchPaths>
           <CodeGeneration>
@@ -78,27 +79,41 @@
         <IsPartOfProject Value="True"/>
       </Unit>
       <Unit>
-        <Filename Value="mainunit.pas"/>
+        <Filename Value="src\mainunit.pas"/>
         <IsPartOfProject Value="True"/>
         <ComponentName Value="formPadXml"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
       </Unit>
       <Unit>
-        <Filename Value="padformat.pas"/>
+        <Filename Value="src\padformat.pas"/>
         <IsPartOfProject Value="True"/>
       </Unit>
       <Unit>
-        <Filename Value="padconst.pas"/>
+        <Filename Value="src\padconst.pas"/>
         <IsPartOfProject Value="True"/>
       </Unit>
       <Unit>
-        <Filename Value="settings.pas"/>
+        <Filename Value="src\settings.pas"/>
         <IsPartOfProject Value="True"/>
       </Unit>
       <Unit>
-        <Filename Value="systemtool.pas"/>
+        <Filename Value="src\systemtool.pas"/>
         <IsPartOfProject Value="True"/>
+      </Unit>
+      <Unit>
+        <Filename Value="src\formabout.pas"/>
+        <IsPartOfProject Value="True"/>
+        <ComponentName Value="formAboutPadXml"/>
+        <HasResources Value="True"/>
+        <ResourceBaseClass Value="Form"/>
+      </Unit>
+      <Unit>
+        <Filename Value="src\formdonate.pas"/>
+        <IsPartOfProject Value="True"/>
+        <ComponentName Value="formDonatePadXml"/>
+        <HasResources Value="True"/>
+        <ResourceBaseClass Value="Form"/>
       </Unit>
     </Units>
   </ProjectOptions>
@@ -110,6 +125,7 @@
     </Target>
     <SearchPaths>
       <IncludeFiles Value="$(ProjOutDir)"/>
+      <OtherUnitFiles Value="src"/>
       <UnitOutputDirectory Value="lib\$(TargetCPU)-$(TargetOS)"/>
     </SearchPaths>
     <Parsing>
